--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,6 @@
     "react-markdown": "^8.0.7",
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
+  }
 }
