--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "research-assistant-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -17,10 +18,11 @@
     "react-markdown": "^8.0.7",
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.10.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,6 +47,6 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "react-scripts": "^5.0.1"
+    "cross-env": "^7.0.3"
   }
 }
