--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "research-assistant",
   "version": "1.0.0",
   "description": "RAG-based citation management application with chat functionality",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "dev": "concurrently \"npm run start:backend\" \"npm run start:electron-dev\"",
     "start:frontend": "cd frontend && npm start",
     "start:backend": "cd backend && npm run dev",
+    "start:electron-dev": "electron .",
+    "build": "cd frontend && npm run build && cd ../backend && npm run build",
+    "package": "electron-builder",
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
     "test": "concurrently \"cd backend && npm test\" \"cd frontend && npm test\""
   },
@@ -23,6 +26,40 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "concurrently": "^7.6.0"
+    "concurrently": "^7.6.0",
+    "electron": "^29.0.1",
+    "electron-builder": "^24.12.0"
+  },
+  "dependencies": {
+    "electron-is-dev": "^2.0.0"
+  },
+  "build": {
+    "appId": "com.researchassistant.app",
+    "mac": {
+      "category": "public.app-category.productivity"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": "AppImage"
+    },
+    "files": [
+      "main.js",
+      "build/**/*",
+      "node_modules/**/*",
+      "backend/**/*",
+      "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
+      "!**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
+      "!**/node_modules/*.d.ts",
+      "!**/node_modules/.bin",
+      "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
+      "!.editorconfig",
+      "!**/._*",
+      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,.gitignore,.gitattributes}",
+      "!**/{__pycache__,thumbs.db,.flowconfig,.idea,.vs,.nyc_output}",
+      "!**/{appveyor.yml,.travis.yml,circle.yml}",
+      "!**/{npm-debug.log,yarn.lock,.yarn-integrity,.yarn-metadata.json}"
+    ]
   }
 }
